[gd_scene load_steps=29 format=3 uid="uid://k24h4k26o8rg"]

[ext_resource type="Script" path="res://examples/diablo_like/player/diablo_like_player.gd" id="1_g6foi"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/ability_container.gd" id="2_nkd2m"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_attribute_map.gd" id="3_avg8u"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute.gd" id="4_8ia2c"]
[ext_resource type="Resource" uid="uid://dqs88wpoa0e0c" path="res://examples/diablo_like/player/abilities/actives/fire_bolt/fire_bolt.tres" id="4_10cyi"]
[ext_resource type="Resource" uid="uid://b6c0giv6vxbtg" path="res://examples/diablo_like/diablo_like_attributes.tres" id="5_t34fp"]
[ext_resource type="Texture2D" uid="uid://dko7n1fbq1a24" path="res://examples/simple_2d_platformer/kenney_pixelplatformer/Characters/character_0000.png" id="6_sro3k"]
[ext_resource type="PackedScene" uid="uid://cj6dayrto8j20" path="res://examples/diablo_like/player/hud/diablo_like_hud.tscn" id="7_u8gkm"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/inventory.gd" id="8_o5wxr"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipment.gd" id="9_qa5o5"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_effect.gd" id="9_rp4t8"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute_effect.gd" id="11_ybkku"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/extended_character_nodes/nodes/2d/point_and_click_2d.gd" id="13_gcqbh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wj50h"]

[sub_resource type="Resource" id="Resource_ry6uo"]
script = ExtResource("4_8ia2c")
attribute_name = "strength"
minimum_value = 1.0
maximum_value = 100.0
current_value = 5.0

[sub_resource type="Resource" id="Resource_3uq4l"]
script = ExtResource("4_8ia2c")
attribute_name = "dexterity"
minimum_value = 1.0
maximum_value = 100.0
current_value = 5.0

[sub_resource type="Resource" id="Resource_ryq53"]
script = ExtResource("4_8ia2c")
attribute_name = "intelligence"
minimum_value = 1.0
maximum_value = 100.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_yfoqh"]
script = ExtResource("4_8ia2c")
attribute_name = "mana"
minimum_value = 0.0
maximum_value = 100.0
current_value = 100.0

[sub_resource type="Resource" id="Resource_2q0be"]
script = ExtResource("4_8ia2c")
attribute_name = "health"
minimum_value = 0.0
maximum_value = 100.0
current_value = 100.0

[sub_resource type="Resource" id="Resource_jc364"]
script = ExtResource("4_8ia2c")
attribute_name = "damage"
minimum_value = 0.0
maximum_value = 2.0
current_value = 2.0

[sub_resource type="Resource" id="Resource_xabx2"]
script = ExtResource("4_8ia2c")
attribute_name = "mana_regeneration_per_second"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.5

[sub_resource type="Resource" id="Resource_dua78"]
script = ExtResource("4_8ia2c")
attribute_name = "health_regeneration_per_second"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_ifsv2"]
script = ExtResource("4_8ia2c")
attribute_name = "armor"
minimum_value = 0.0
maximum_value = 100.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_1cmvn"]
script = ExtResource("4_8ia2c")
attribute_name = "pick_radius"
minimum_value = 0.0
maximum_value = 0.0
current_value = 5.0

[sub_resource type="Resource" id="Resource_e0jxt"]
script = ExtResource("4_8ia2c")
attribute_name = "critical_damage_chance"
minimum_value = 0.0
maximum_value = 25.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_rlxm1"]
script = ExtResource("4_8ia2c")
attribute_name = "movement_speed"
minimum_value = 0.0
maximum_value = 10000.0
current_value = 200.0

[sub_resource type="Resource" id="Resource_7xjvk"]
script = ExtResource("4_8ia2c")
attribute_name = "movement_speed_bonus"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_ftda0"]
script = ExtResource("11_ybkku")
life_time = 1
apply_every_second = 1.0
max_applications = 0
applies_as = 0
attribute_name = "mana"
minimum_value = 1.0
maximum_value = 1.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g6foi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wj50h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_sro3k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AbilityContainer" type="Node" parent="."]
script = ExtResource("2_nkd2m")
gameplay_attribute_map_path = NodePath("../GameplayAttributeMap")
abilities = Array[Resource("res://addons/godot_gameplay_systems/attributes_and_abilities/resources/ability.gd")]([ExtResource("4_10cyi"), null, null])

[node name="Equipment" type="Node" parent="."]
script = ExtResource("9_qa5o5")
owner_path = NodePath("..")
inventory_path = NodePath("../Inventory")

[node name="GameplayAttributeMap" type="Node" parent="."]
script = ExtResource("3_avg8u")
owning_character = NodePath("..")
attributes = Array[ExtResource("4_8ia2c")]([SubResource("Resource_ry6uo"), SubResource("Resource_3uq4l"), SubResource("Resource_ryq53"), SubResource("Resource_yfoqh"), SubResource("Resource_2q0be"), SubResource("Resource_jc364"), SubResource("Resource_xabx2"), SubResource("Resource_dua78"), SubResource("Resource_ifsv2"), SubResource("Resource_1cmvn"), SubResource("Resource_e0jxt"), SubResource("Resource_rlxm1"), SubResource("Resource_7xjvk")])
table = ExtResource("5_t34fp")

[node name="GameplayEffect" type="Node" parent="GameplayAttributeMap"]
script = ExtResource("9_rp4t8")
table = ExtResource("5_t34fp")
attributes_affected = Array[ExtResource("11_ybkku")]([SubResource("Resource_ftda0")])

[node name="Inventory" type="Node" parent="."]
script = ExtResource("8_o5wxr")
owner_path = NodePath("..")
equipment_path = NodePath("../Equipment")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DiabloLikeHud" parent="CanvasLayer" instance=ExtResource("7_u8gkm")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PointAndClick2D" type="Node2D" parent="." node_paths=PackedStringArray("character_2d", "navigation_agent")]
script = ExtResource("13_gcqbh")
character_2d = NodePath("..")
navigation_agent = NodePath("../NavigationAgent2D")
